# echoes-app

./: .gitignore  Anchor.toml  Cargo.toml  README.md  codama.json  next.config.ts  package-lock.json  package.json  rust-toolchain.toml
.claude/: launch.json
programs/echoes-voting/: Cargo.toml
programs/echoes-voting/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/bags-launch/: route.ts
src/app/api/bags/fee-config/: route.ts
src/app/api/bags/fee-share-txs/: route.ts
src/app/api/bags/info/: route.ts
src/app/api/bags/launch-txs/: route.ts
src/app/api/dashboard/: route.ts
src/app/api/echoes-price/: route.ts
src/app/api/pool/: route.ts
src/app/api/pool/reveal/: route.ts
src/app/api/pool/vote/: route.ts
src/app/api/transcribe/: route.ts
src/app/api/tts/: route.ts
src/app/api/upload/: route.ts
src/app/dashboard/: page.tsx
src/app/evaluate/: page.tsx
src/app/evaluate/[storyId]/: page.tsx
src/app/list/[storyId]/: page.tsx
src/app/record/: page.tsx
src/app/tokenize/[storyId]/: page.tsx
src/app/vote/: page.tsx
src/app/zone/: page.tsx
src/components/: AudioPlayer.tsx  AudioRecorder.tsx  AuthGate.tsx  NavBar.tsx  Onboarding.tsx
src/hooks/: useWallet.ts
src/idl/: echoes_voting.json
src/lib/: __noop__.ts  arweave.ts  commit-reveal.ts  db.ts  echoes-payment.ts  pool-state.ts  r2.ts  rpc.ts  seeker-idl.ts  seeker.ts  store.ts  types.ts  upload.ts  wallet.ts
src/providers/: PrivyProvider.tsx
