[package]
name = "echoes-voting"
version = "0.1.0"
description = "Blind SKR voting + weekly pool distribution for Echoes"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "echoes_voting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
